@@ -251,6 +251,11 @@ gboolean		gst_element_link_pads           (GstElement *src, const gchar *srcpadn
 		                                         GstElement *dest, const gchar *destpadname);
 void                    gst_element_unlink_pads         (GstElement *src, const gchar *srcpadname,
 		                                         GstElement *dest, const gchar *destpadname);
+
+/* util elementfactory functions */
+gboolean		gst_element_factory_can_src_caps(GstElementFactory *factory, const GstCaps *caps);
+gboolean		gst_element_factory_can_sink_caps(GstElementFactory *factory, const GstCaps *caps);
+
 /* util query functions */
 gboolean                gst_element_query_position      (GstElement *element, GstFormat *format,
 		                                         gint64 *cur, gint64 *end);
